[package]
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
edition = "2018"
name = "mdbook-satysfi"
version = "0.0.2"
license = "MIT"
readme = "README.md"
repository = "https://github.com/puripuri2100/mdbook-satysfi"
keywords = ["book", "markdown", "satysfi", "mdbook"]
categories = ["encoding"]
description = "A mdbook backend for generating SATySFi documents."
exclude = ["tests/*", ".github/*", "target/+"]
documentation = "https://puripuri2100.github.io/mdbook-satysfi/ja/"

[dependencies]
mdbook = "0.4.6"
pulldown-cmark = "0.8.0"
regex = "1.4.2"
html_parser = "0.6.2"
toml = "0.5.8"
anyhow = "1.0.38"
