[package]
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
edition = "2018"
name = "mdbook-satysfi"
version = "0.0.6"
license = "MIT"
readme = "README.md"
repository = "https://github.com/puripuri2100/mdbook-satysfi"
keywords = ["book", "markdown", "satysfi", "mdbook"]
categories = ["encoding"]
description = "A mdbook backend for generating SATySFi documents."
exclude = ["tests/*", ".github/*", "target/+"]
documentation = "https://puripuri2100.github.io/mdbook-satysfi/ja/"

[dependencies]
mdbook = "0.4.18"
pulldown-cmark = "0.9.1"
regex = "1.5.6"
html_parser = "0.6.3"
toml = "0.5.9"
anyhow = "1.0.57"
clap = "3.1.18"
